Updates for Oberlin.tv, first commit

--- a/skin.conf
+++ b/skin.conf
@@ -12,51 +12,51 @@
     web_url = http://cw9009.x10host.com
 
     # Current radar image
-    radar_img = http://www.findu.com/cgi-bin/radar-find.cgi?call=CW9009
+    #radar_img = http://www.findu.com/cgi-bin/radar-find.cgi?call=CW9009
     # Current radar animation (starts on radar_img hover)
-    radar_gif = http://radar.weather.gov/lite/N0R/CBX_loop.gif
+    radar_gif = http://radar.weather.gov/lite/N0R/RAX_loop.gif
     # Hyperlink for radar
-    radar_url = http://radar.weather.gov/radar.php?rid=cbx&product=N0R&overlay=11101111&loop=no
+    radar_url = http://radar.weather.gov/radar.php?rid=rax&product=N0R&overlay=11101111&loop=no
 
     # Lightning map and hyperlink
     #lightning_map = http://images.lightningmaps.org/blitzortung/america/index.php?map=usa&period=0.25
     #lightning_url = http://www.lightningmaps.org/realtime 
 
     # URL for another radar (for example full Europe, Frankfurt center)
-    radar_url_alt = http://radar.weather.gov/Conus/Loop/pacnorthwest_loop.gif
-    radar_url_alt_text = "Pacific Northwest Radar"
+    #radar_url_alt = http://radar.weather.gov/Conus/Loop/pacnorthwest_loop.gif
+    #radar_url_alt_text = "Pacific Northwest Radar"
 
     # You. Only shows up in footer
-    you = "JDS"
-    emailname = "Josh@cw9009.x10host.com"
-    email = "Josh@cw9009.x10host.com"
+    #you = "JDS"
+    #emailname = "Josh@cw9009.x10host.com"
+    #email = "Josh@cw9009.x10host.com"
     
     # Camera link
     #cameratitle = "(Chinden/Linder)"
     #camera = http://www.achdidaho.org/ATIS/CCTV/CCTV_583.jpg?157
-    cameratitle = "(Ten Mile/Linder)"
-    camera = http://www.achdidaho.org/ATIS/CCTV/CCTV_664.jpg?25
-    cameratitle2 = "(Chinden/Long Lake)"
-    camera2 = http://www.achdidaho.org/ATIS/CCTV/CCTV_662.jpg?674
+    #cameratitle = "(Ten Mile/Linder)"
+    #camera = http://www.achdidaho.org/ATIS/CCTV/CCTV_664.jpg?25
+    #cameratitle2 = "(Chinden/Long Lake)"
+    #camera2 = http://www.achdidaho.org/ATIS/CCTV/CCTV_662.jpg?674
     
     # Google Analytics ID
-    googleAnalyticsId = UA-88526004-1
+    #googleAnalyticsId = UA-88526004-1
 
     #CWOP
-    cwop = CW9009
-    cwop_url = http://www.findu.com/cgi-bin/wxpage.cgi?call=CW9009&last=24
+    #cwop = CW9009
+    #cwop_url = http://www.findu.com/cgi-bin/wxpage.cgi?call=CW9009&last=24
 
     #mesowest
-    mwest = C9009
-    mwest_url = http://mesowest.utah.edu/cgi-bin/droman/meso_base_dyn.cgi?stn=C9009&unit=0&timetype=LOCAL
+    #mwest = C9009
+    #mwest_url = http://mesowest.utah.edu/cgi-bin/droman/meso_base_dyn.cgi?stn=C9009&unit=0&timetype=LOCAL
 
     #weather underground
-    wunderground = KIDMERID44
-    wu_url = https://www.wunderground.com/personal-weather-station/dashboard?ID=KIDMERID44#history
+    #wunderground = KIDMERID44
+    #wu_url = https://www.wunderground.com/personal-weather-station/dashboard?ID=KIDMERID44#history
 
     #CoCoRaHS
-    crahs = ID-AD-36
-    crahs_url = http://www.cocorahs.org/ViewData/CountyDailyPrecipReports.aspx?state=ID&county=AD
+    #crahs = ID-AD-36
+    #crahs_url = http://www.cocorahs.org/ViewData/CountyDailyPrecipReports.aspx?state=ID&county=AD
     
 ###############################################################################################
 
