--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
+language: generic
+
 before_install:
   - wget -qO - http://weewx.com/keys.html | sudo apt-key add -
-  - sudo add-apt-repository -yu http://weewx.com/apt/weewx.list
+  - sudo add-apt-repository -y http://weewx.com/apt/weewx.list
   - sudo apt update
   - sudo apt-get install -y weewx
