--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ before_install:
    - sudo apt install -yq python-imaging python-usb
    - wget http://weewx.com/downloads/weewx_3.8.0-1_all.deb
    - sudo dpkg -i weewx_3.8.0-1_all.deb
+
+script:
    - wee_reports
