More debug stuff in travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 script:
    - sudo ./setup_reports.sh
    - sudo ./test_wee_reports.sh
-   - sudo ls /tmp/weewx/skins/oberlibtv
+   - sudo wee_reports ./weewx-test.conf
+   - sudo ls /tmp/weewx/skins/oberlintv
    - sudo ls /tmp/weewx/html
-   - sudo cat /tmp/weewx/index.html
+   - sudo cat /tmp/weewx/html/index.html
