Grep syslog to see what's happening with wee_reports

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 script:
    - sudo ./setup_reports.sh
    - sudo ./test_wee_reports.sh
-   - sudo wee_reports ./weewx-test.conf
+   - sudo cat /var/log/syslog | grep wee
    - sudo ls /tmp/weewx/skins/oberlintv
    - sudo ls /tmp/weewx/html
    - sudo cat /tmp/weewx/html/index.html
