--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: generic
 
 before_install:
+   - sudo ntpdate ntp.ubuntu.com
    - sudo apt update
    - sudo apt install -yq python-imaging python-usb
    - wget http://weewx.com/downloads/weewx_3.8.0-1_all.deb
