--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
    - wget http://weewx.com/downloads/weewx_3.8.0-1_all.deb
    - sudo dpkg -i weewx_3.8.0-1_all.deb
    - sudo date
-   - sudo ntpdate ntp.ubuntu.com
+   #- sudo ntpdate ntp.ubuntu.com
 
 script:
    - sudo ./setup_reports.sh
