--- a/weewx-test.conf
+++ b/weewx-test.conf
@@ -315,7 +315,8 @@ version = 3.8.0
     
     # If the station hardware supports data logging then the archive interval
     # will be downloaded from the station. Otherwise, specify it (in seconds).
-    archive_interval = 300
+    # mao 2018-Jan-6 Need to generate some archive records so we can test report generation
+    archive_interval = 3
     
     # If possible, new archive records are downloaded from the station
     # hardware. If the hardware does not support this, then new archive
