Config to generate simulation data starting Jan-01-2017

--- a/weewx-test.conf
+++ b/weewx-test.conf
@@ -67,7 +67,7 @@ version = 3.8.0
     
     # The start time. Format is YYYY-mm-ddTHH:MM. If not specified, the default 
     # is to use the present time.
-    #start = 2011-01-01T00:00
+    start = 2017-01-01T00:00
     
     # The driver to use:
     driver = weewx.drivers.simulator
