--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,31 @@
-language: python
+language: generic
+
+addons:
+  ssh_known_hosts: Oberlin.TV
 
 before_install:
-   - sudo apt update
-   - sudo apt install -yq python-imaging python-usb
-   - wget http://weewx.com/downloads/weewx_3.8.0-1_all.deb
-   - sudo dpkg -i weewx_3.8.0-1_all.deb
+- sudo apt update
+- sudo apt install -yq python-imaging python-usb
+- wget http://weewx.com/downloads/weewx_3.8.0-1_all.deb
+- sudo dpkg -i weewx_3.8.0-1_all.deb
 
 script:
-   - sudo ./setup_reports.sh
-   - sudo ./test_wee_reports.sh
-   - sudo cat /var/log/syslog | grep wee
-   - sudo ls /tmp/weewx/skins/oberlintv
-   - sudo ls /tmp/weewx/html
+- sudo ./setup_reports.sh
+- sudo ./test_wee_reports.sh
+- sudo cat /var/log/syslog | grep wee
+- sudo ls /tmp/weewx/skins/oberlintv
+- sudo ls /tmp/weewx/html
+
+
+before_deploy:
+- openssl aes-256-cbc -K $encrypted_9aff289ebb83_key -iv $encrypted_9aff289ebb83_iv -in deploy_rsa.enc  -out /tmp/deploy_rsa -d
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/deploy_rsa
+- ssh-add /tmp/deploy_rsa
+
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/ mao@Oberlin.TV:/etc/weewx/skins/oberlintv/
+  on:
+    branch: master
