Changes for oberlin.tv site

--- a/skin.conf
+++ b/skin.conf
@@ -3,13 +3,14 @@
 # Copyright (c) 2010 Tom Keffer <tkeffer@gmail.com>                           #
 # SOFA SKIN (c) 2015 Sven Reifschneider <hello@blauesledersofa.de>            #
 # SOFA SKIN CONFIGURATION FILE                                                #
+# mao 2018-Jan-7 Updates for Oberlin.TV                                       #
 ###############################################################################
 
 [Extras]
     # Template Extras
  
     # Website URL
-    web_url = http://cw9009.x10host.com
+    web_url = http://Oberlin.TV
 
     # Current radar image
     #radar_img = http://www.findu.com/cgi-bin/radar-find.cgi?call=CW9009
@@ -222,7 +223,7 @@
         windvec        = Wind Vector
     
         # This one is probably specific to my station!
-        extraTemp1     = Pond Temperature
+        #extraTemp1     = Pond Temperature
 
 ###############################################################################
 
